<resources>
    <string name="app_name">Party Maker</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Party Maker</string>
    <string name="tab_text_2">Upcoming</string>
    <string name="tab_text_3">Past</string>

    <string name="Celebration">&#127881;</string>
    <string name="Location">&#127757;</string>
    <string name="DateTime">&#128467;</string>
    <string name="Description">Description &#128221;</string>
    <string name="Theme">Theme &#10024;</string>
    <string name="Dress_code">Dress code &#128131; &#128378;</string>
    <string name="Food">&#127856;</string>
    <string name="Drinks">&#127863;</string>
    <string name="Partner">&#128149;</string>
    <string name="Friends">&#128107;</string>
    <string name="Children">&#128118;</string>
    <string name="Pets">&#128062;</string>
    <string name="Entry_fee">Entry fee &#128176;</string>
    <string name="Parking_details">Parking details &#128663;</string>
    <string name="Access_code">Access code &#128273;</string>

    <string name="Profile_photo">Profile photo</string>
    <string name="Nickname">Nickname</string>
    <string name="NicknameColon">Nickname:</string>
    <string name="Email">Email</string>
    <string name="EmailColon">Email:</string>
    <string name="Password_old">Old password</string>
    <string name="Password_new">New password</string>

    <string name="profile_settings">Profile</string>
    <string name="profile_settings_description">Profile settings</string>
    <string name="participant_profile_picture">Participant\'s profile picture</string>
    <string name="displayed_name_placeholder">Displayed Name</string>
    <string name="participant_has_a_comment">Participant has a comment</string>
    <string name="participants">Participants</string>

</resources>
