<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="club.partymaker.partymaker.user.UserSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.UserSettingsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="187dp"
                    android:layout_height="157dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="65dp"
                    android:layout_marginBottom="40dp"
                    android:contentDescription="@string/Profile_photo"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    app:tint="?attr/colorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Nickname2"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewNickname"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:text='@{viewmodel.displayedName}'
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Email2"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:text='@{viewmodel.email}'
                        android:textSize="16sp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LayoutNickname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/Nickname"
                    app:boxStrokeColor="@color/fui_bgEmail"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_insert_emoticon_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:maxLength="25"
                        android:maxLines="2"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonUpdateNickname"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Update nickname"
                    android:onClick="onUpdateNickname"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LayoutEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/Email"
                    app:boxStrokeColor="@color/fui_bgEmail"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:maxLength="150"
                        android:maxLines="2"
                        android:nextFocusDown="@+id/textPartyDescription"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonUpdateEmail"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Update email"
                    android:onClick="onUpdateEmail"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LayoutPasswordOld"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/Password_old"
                    app:boxStrokeColor="@color/fui_bgEmail"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordOld"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:maxLength="150"
                        android:maxLines="2"
                        android:nextFocusDown="@+id/textPartyDescription"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LayoutPasswordNew"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:hint="@string/Password_new"
                    app:boxStrokeColor="@color/fui_bgEmail"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordNew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:maxLength="150"
                        android:maxLines="2"
                        android:nextFocusDown="@+id/textPartyDescription"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonUpdatePassword"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Update password"
                    android:onClick="onUpdatePassword"/>

                <Button
                    android:id="@+id/buttonSync"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="Sync with Google" />

                <Button
                    android:id="@+id/buttonLogout"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button_cancel_inactive"
                    android:text="Logout"
                    android:onClick="onLogout"/>

                <Button
                    android:id="@+id/buttonDeleteAccount"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#E14343"
                    android:textColor="@color/white"
                    android:text="Delete account" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
